# speech-denoiser

./: .gitignore  Makefile  README.md  pyproject.toml
_OLD/: FeatureExtractor.m  add_noise.m  validate_dataset.py
data/: AudioContainer.m  FeatureExtractor.m  add_noise.m  processRecording.m
data/demos/: phaseInfluenceOnAudio.mlx
denoiser/: AudioContainer.m  __init__.py  add_noise.m  config.py  data.py  dataset.py  features.py  plots.py  preprocessor.py  process_data.py
denoiser/metrics/: __init__.py  custom_metrics.py
denoiser/modeling/: __init__.py  evaluate.py  predict.py  train.py
models/: __init__.py  custom_callbacks.py  custom_dataloaders.py  custom_models.py
models/evaluate/: cnn-ced-minmax.py  cnn-ced-mix.py  cnn-ced.py
models/train/: cnn-ced-minmax.py  cnn-ced-mix.py  cnn-ced.py
preprocessing/: process_data.py
scripts/: silence.py
