[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
# pip install -e .

[project]
name = "denoiser"
version = "0.1.0"
description = "Speech denoiser deep learning project that is my master thesis actually."
authors = [
  { name = "Mateusz Krol" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["denoiser"]
force_sort_within_sections = true
